@@ -10,6 +10,24 @@ extern "C" {
 
 #ifdef STACKLESS
 typedef PyObject *(PyFrame_ExecFunc) (struct _frame *, int, PyObject *);
+/*
+ * How to write frame execution functions:
+ *
+ * Special rule for frame execution functions: the function owns a reference to retval!
+ *
+ *  PyObject * example(PyFrameObject *f, int exc, PyObject *retval)
+ *  {
+ *     PyThreadState *ts = PyThreadState_GET();
+ *
+ *     do something ....
+ *     if you change retval, use Py_SETREF(retval, new_value) or
+ *     Py_CLEAR(retval)
+ *
+ *     SLP_STORE_NEXT_FRAME(ts, f->f_back);
+ *     return retval;
+ *  }
+ *
+ */
 #endif
 
 typedef struct {
